package com.company;

import java.util.ArrayList;

public class Course {
/*    private String name;
    Arraylist<Ingredients> ingredient = new ArrayList<>();

public Course(String name){
    this.name = name;
}
*/
}
